feat: update ere and ere-guests to v0.14.0
